// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationPreviewSample should match snapshot, preview off, reminder off 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "#FFFFFF",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        collapsable={false}
        pointerEvents="box-none"
        style={
          {
            "zIndex": 1,
          }
        }
      >
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          onLayout={[Function]}
          pointerEvents="box-none"
          style={null}
        >
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 0,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "backgroundColor": "#FFFFFF",
                  "borderBottomColor": "rgb(216, 216, 216)",
                  "flex": 1,
                  "shadowColor": "rgb(216, 216, 216)",
                  "shadowOffset": {
                    "height": 0.5,
                    "width": 0,
                  },
                  "shadowOpacity": 0.85,
                  "shadowRadius": 0,
                }
              }
            />
          </View>
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "height": 44,
                "maxHeight": undefined,
                "minHeight": undefined,
                "opacity": undefined,
                "transform": undefined,
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                {
                  "height": 0,
                }
              }
            />
            <View
              pointerEvents="box-none"
              style={
                {
                  "alignItems": "stretch",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-start",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginStart": 0,
                    "opacity": 1,
                  }
                }
              />
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "justifyContent": "center",
                    "marginHorizontal": 16,
                    "maxWidth": 718,
                    "opacity": 1,
                  }
                }
              >
                <Text
                  accessibilityRole="header"
                  aria-level="1"
                  collapsable={false}
                  numberOfLines={1}
                  onLayout={[Function]}
                  style={
                    {
                      "color": "rgb(28, 28, 30)",
                      "fontSize": 17,
                      "fontWeight": "600",
                    }
                  }
                >
                  ONBOARDING_NOTIFICATIONS_PREFERENCES
                </Text>
              </View>
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-end",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginEnd": 0,
                    "opacity": 1,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <RNSScreenContainer
        onLayout={[Function]}
        style={
          {
            "flex": 1,
          }
        }
      >
        <RNSScreen
          activityState={2}
          collapsable={false}
          gestureResponseDistance={
            {
              "bottom": -1,
              "end": -1,
              "start": -1,
              "top": -1,
            }
          }
          onGestureCancel={[Function]}
          pointerEvents="box-none"
          sheetAllowedDetents="large"
          sheetCornerRadius={-1}
          sheetExpandsWhenScrolledToEdge={true}
          sheetGrabberVisible={false}
          sheetLargestUndimmedDetent="all"
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              [
                {
                  "display": "flex",
                  "overflow": undefined,
                },
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              {
                "close": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                handlerTag={4}
                handlerType="PanGestureHandler"
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  {
                    "flex": 1,
                    "transform": [
                      {
                        "translateX": 0,
                      },
                      {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="box-none"
                  style={
                    [
                      {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      [
                        {
                          "backgroundColor": "#FFFFFF",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        style={
                          {
                            "alignItems": "center",
                            "backgroundColor": "#FFFFFF",
                            "borderColor": "#CCD4DC",
                            "borderRadius": 8,
                            "borderWidth": 1,
                            "flexDirection": "row",
                            "marginVertical": 4,
                            "minHeight": 90,
                            "paddingHorizontal": 24,
                            "paddingVertical": 8,
                          }
                        }
                      >
                        <RNSVGSvgView
                          accessibilityElementsHidden={true}
                          accessibilityLabel=""
                          accessible={false}
                          align="xMidYMid"
                          bbHeight={24}
                          bbWidth={24}
                          focusable={false}
                          height={24}
                          importantForAccessibility="no-hide-descendants"
                          meetOrSlice={0}
                          minX={0}
                          minY={0}
                          style={
                            [
                              {
                                "backgroundColor": "transparent",
                                "borderWidth": 0,
                              },
                              {
                                "color": "#2351E6",
                              },
                              {
                                "flex": 0,
                                "height": 24,
                                "width": 24,
                              },
                            ]
                          }
                          tintColor="#2351E6"
                          vbHeight={24}
                          vbWidth={24}
                          width={24}
                        >
                          <RNSVGGroup
                            fill={
                              {
                                "payload": 4278190080,
                                "type": 0,
                              }
                            }
                          >
                            <RNSVGPath
                              d="M2.5 2a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
                              fill={
                                {
                                  "type": 2,
                                }
                              }
                              propList={
                                [
                                  "fill",
                                ]
                              }
                            />
                            <RNSVGPath
                              clipRule={0}
                              d="M23.5 14c0 4.418-3.582 8-7.619 8-4.8 0-8.381-3.582-8.381-8s3.582-8 8.381-8c4.037 0 7.619 3.582 7.619 8Zm-6.035-.84h1.065v-1.048h-1.057v-1.267h-1.157v4.216c0 .667.092 1.122.283 1.365.184.252.537.374 1.058.374.2 0 .498-.049.881-.138l-.054-.975-.659.016c-.114 0-.199-.024-.252-.081a.328.328 0 0 1-.092-.195 4.118 4.118 0 0 1-.016-.39V13.16Zm-3.486-1.04v4.574h1.157v-4.573h-1.157Zm-1.737-.113c.203 0 .374.068.506.204a.692.692 0 0 1 .194.507.675.675 0 0 1-.194.5.684.684 0 0 1-.498.189.693.693 0 0 1-.708-.704.72.72 0 0 1 .195-.5.672.672 0 0 1 .505-.196Z"
                              fill={
                                {
                                  "type": 2,
                                }
                              }
                              fillRule={0}
                              propList={
                                [
                                  "fill",
                                  "fillRule",
                                ]
                              }
                            />
                            <RNSVGPath
                              d="M4.5 11.5a2 2 0 1 0-4 0V20a2 2 0 1 0 4 0v-8.5ZM2.5 2a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
                              fill={
                                {
                                  "type": 2,
                                }
                              }
                              propList={
                                [
                                  "fill",
                                ]
                              }
                            />
                            <RNSVGPath
                              clipRule={0}
                              d="M23.5 14c0 4.418-3.582 8-7.619 8-4.8 0-8.381-3.582-8.381-8s3.582-8 8.381-8c4.037 0 7.619 3.582 7.619 8Zm-6.035-.84h1.065v-1.048h-1.057v-1.267h-1.157v4.216c0 .667.092 1.122.283 1.365.184.252.537.374 1.058.374.2 0 .498-.049.881-.138l-.054-.975-.659.016c-.114 0-.199-.024-.252-.081a.328.328 0 0 1-.092-.195 4.118 4.118 0 0 1-.016-.39V13.16Zm-3.486-1.04v4.574h1.157v-4.573h-1.157Zm-1.737-.113c.203 0 .374.068.506.204a.692.692 0 0 1 .194.507.675.675 0 0 1-.194.5.684.684 0 0 1-.498.189.693.693 0 0 1-.708-.704.72.72 0 0 1 .195-.5.672.672 0 0 1 .505-.196Z"
                              fill={
                                {
                                  "type": 2,
                                }
                              }
                              fillRule={0}
                              propList={
                                [
                                  "fill",
                                  "fillRule",
                                ]
                              }
                            />
                            <RNSVGPath
                              d="M4.5 11.5a2 2 0 1 0-4 0V20a2 2 0 1 0 4 0v-8.5Z"
                              fill={
                                {
                                  "type": 2,
                                }
                              }
                              propList={
                                [
                                  "fill",
                                ]
                              }
                            />
                          </RNSVGGroup>
                        </RNSVGSvgView>
                        <View
                          style={
                            {
                              "width": 16,
                            }
                          }
                        />
                        <View
                          style={
                            {
                              "flex": 1,
                            }
                          }
                        >
                          <Text
                            allowFontScaling={false}
                            color="black"
                            defaultColor="black"
                            defaultWeight="SemiBold"
                            font="TitilliumSansPro"
                            fontStyle={
                              {
                                "fontSize": 18,
                                "lineHeight": 25,
                              }
                            }
                            style={
                              [
                                {
                                  "fontSize": 18,
                                  "lineHeight": 25,
                                },
                                {
                                  "color": "#0E0F13",
                                  "fontFamily": "Titillium Sans Pro",
                                  "fontStyle": "normal",
                                  "fontWeight": "600",
                                },
                              ]
                            }
                            weight="SemiBold"
                          >
                            You have a new message
                          </Text>
                          <Text
                            allowFontScaling={false}
                            color="black"
                            defaultColor="black"
                            defaultWeight="Bold"
                            font="TitilliumSansPro"
                            fontStyle={
                              {
                                "fontSize": 14,
                                "lineHeight": 24,
                              }
                            }
                            style={
                              [
                                {
                                  "fontSize": 14,
                                  "lineHeight": 24,
                                },
                                {
                                  "color": "#0E0F13",
                                  "fontFamily": "Titillium Sans Pro",
                                  "fontStyle": "normal",
                                  "fontWeight": "400",
                                },
                              ]
                            }
                            weight="Regular"
                          >
                            Open the app to read the content
                          </Text>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RNSScreen>
      </RNSScreenContainer>
    </View>
  </RNCSafeAreaProvider>
</View>
`;

exports[`NotificationPreviewSample should match snapshot, preview off, reminder on 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "#FFFFFF",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        collapsable={false}
        pointerEvents="box-none"
        style={
          {
            "zIndex": 1,
          }
        }
      >
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          onLayout={[Function]}
          pointerEvents="box-none"
          style={null}
        >
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 0,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "backgroundColor": "#FFFFFF",
                  "borderBottomColor": "rgb(216, 216, 216)",
                  "flex": 1,
                  "shadowColor": "rgb(216, 216, 216)",
                  "shadowOffset": {
                    "height": 0.5,
                    "width": 0,
                  },
                  "shadowOpacity": 0.85,
                  "shadowRadius": 0,
                }
              }
            />
          </View>
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "height": 44,
                "maxHeight": undefined,
                "minHeight": undefined,
                "opacity": undefined,
                "transform": undefined,
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                {
                  "height": 0,
                }
              }
            />
            <View
              pointerEvents="box-none"
              style={
                {
                  "alignItems": "stretch",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-start",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginStart": 0,
                    "opacity": 1,
                  }
                }
              />
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "justifyContent": "center",
                    "marginHorizontal": 16,
                    "maxWidth": 718,
                    "opacity": 1,
                  }
                }
              >
                <Text
                  accessibilityRole="header"
                  aria-level="1"
                  collapsable={false}
                  numberOfLines={1}
                  onLayout={[Function]}
                  style={
                    {
                      "color": "rgb(28, 28, 30)",
                      "fontSize": 17,
                      "fontWeight": "600",
                    }
                  }
                >
                  ONBOARDING_NOTIFICATIONS_PREFERENCES
                </Text>
              </View>
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-end",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginEnd": 0,
                    "opacity": 1,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <RNSScreenContainer
        onLayout={[Function]}
        style={
          {
            "flex": 1,
          }
        }
      >
        <RNSScreen
          activityState={2}
          collapsable={false}
          gestureResponseDistance={
            {
              "bottom": -1,
              "end": -1,
              "start": -1,
              "top": -1,
            }
          }
          onGestureCancel={[Function]}
          pointerEvents="box-none"
          sheetAllowedDetents="large"
          sheetCornerRadius={-1}
          sheetExpandsWhenScrolledToEdge={true}
          sheetGrabberVisible={false}
          sheetLargestUndimmedDetent="all"
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              [
                {
                  "display": "flex",
                  "overflow": undefined,
                },
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              {
                "close": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                handlerTag={3}
                handlerType="PanGestureHandler"
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  {
                    "flex": 1,
                    "transform": [
                      {
                        "translateX": 0,
                      },
                      {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="box-none"
                  style={
                    [
                      {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      [
                        {
                          "backgroundColor": "#FFFFFF",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        style={
                          {
                            "alignItems": "center",
                            "backgroundColor": "#FFFFFF",
                            "borderColor": "#CCD4DC",
                            "borderRadius": 8,
                            "borderWidth": 1,
                            "flexDirection": "row",
                            "marginVertical": 4,
                            "minHeight": 90,
                            "paddingHorizontal": 24,
                            "paddingVertical": 8,
                          }
                        }
                      >
                        <RNSVGSvgView
                          accessibilityElementsHidden={true}
                          accessibilityLabel=""
                          accessible={false}
                          align="xMidYMid"
                          bbHeight={24}
                          bbWidth={24}
                          focusable={false}
                          height={24}
                          importantForAccessibility="no-hide-descendants"
                          meetOrSlice={0}
                          minX={0}
                          minY={0}
                          style={
                            [
                              {
                                "backgroundColor": "transparent",
                                "borderWidth": 0,
                              },
                              {
                                "color": "#2351E6",
                              },
                              {
                                "flex": 0,
                                "height": 24,
                                "width": 24,
                              },
                            ]
                          }
                          tintColor="#2351E6"
                          vbHeight={24}
                          vbWidth={24}
                          width={24}
                        >
                          <RNSVGGroup
                            fill={
                              {
                                "payload": 4278190080,
                                "type": 0,
                              }
                            }
                          >
                            <RNSVGPath
                              d="M2.5 2a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
                              fill={
                                {
                                  "type": 2,
                                }
                              }
                              propList={
                                [
                                  "fill",
                                ]
                              }
                            />
                            <RNSVGPath
                              clipRule={0}
                              d="M23.5 14c0 4.418-3.582 8-7.619 8-4.8 0-8.381-3.582-8.381-8s3.582-8 8.381-8c4.037 0 7.619 3.582 7.619 8Zm-6.035-.84h1.065v-1.048h-1.057v-1.267h-1.157v4.216c0 .667.092 1.122.283 1.365.184.252.537.374 1.058.374.2 0 .498-.049.881-.138l-.054-.975-.659.016c-.114 0-.199-.024-.252-.081a.328.328 0 0 1-.092-.195 4.118 4.118 0 0 1-.016-.39V13.16Zm-3.486-1.04v4.574h1.157v-4.573h-1.157Zm-1.737-.113c.203 0 .374.068.506.204a.692.692 0 0 1 .194.507.675.675 0 0 1-.194.5.684.684 0 0 1-.498.189.693.693 0 0 1-.708-.704.72.72 0 0 1 .195-.5.672.672 0 0 1 .505-.196Z"
                              fill={
                                {
                                  "type": 2,
                                }
                              }
                              fillRule={0}
                              propList={
                                [
                                  "fill",
                                  "fillRule",
                                ]
                              }
                            />
                            <RNSVGPath
                              d="M4.5 11.5a2 2 0 1 0-4 0V20a2 2 0 1 0 4 0v-8.5ZM2.5 2a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
                              fill={
                                {
                                  "type": 2,
                                }
                              }
                              propList={
                                [
                                  "fill",
                                ]
                              }
                            />
                            <RNSVGPath
                              clipRule={0}
                              d="M23.5 14c0 4.418-3.582 8-7.619 8-4.8 0-8.381-3.582-8.381-8s3.582-8 8.381-8c4.037 0 7.619 3.582 7.619 8Zm-6.035-.84h1.065v-1.048h-1.057v-1.267h-1.157v4.216c0 .667.092 1.122.283 1.365.184.252.537.374 1.058.374.2 0 .498-.049.881-.138l-.054-.975-.659.016c-.114 0-.199-.024-.252-.081a.328.328 0 0 1-.092-.195 4.118 4.118 0 0 1-.016-.39V13.16Zm-3.486-1.04v4.574h1.157v-4.573h-1.157Zm-1.737-.113c.203 0 .374.068.506.204a.692.692 0 0 1 .194.507.675.675 0 0 1-.194.5.684.684 0 0 1-.498.189.693.693 0 0 1-.708-.704.72.72 0 0 1 .195-.5.672.672 0 0 1 .505-.196Z"
                              fill={
                                {
                                  "type": 2,
                                }
                              }
                              fillRule={0}
                              propList={
                                [
                                  "fill",
                                  "fillRule",
                                ]
                              }
                            />
                            <RNSVGPath
                              d="M4.5 11.5a2 2 0 1 0-4 0V20a2 2 0 1 0 4 0v-8.5Z"
                              fill={
                                {
                                  "type": 2,
                                }
                              }
                              propList={
                                [
                                  "fill",
                                ]
                              }
                            />
                          </RNSVGGroup>
                        </RNSVGSvgView>
                        <View
                          style={
                            {
                              "width": 16,
                            }
                          }
                        />
                        <View
                          style={
                            {
                              "flex": 1,
                            }
                          }
                        >
                          <Text
                            allowFontScaling={false}
                            color="black"
                            defaultColor="black"
                            defaultWeight="SemiBold"
                            font="TitilliumSansPro"
                            fontStyle={
                              {
                                "fontSize": 18,
                                "lineHeight": 25,
                              }
                            }
                            style={
                              [
                                {
                                  "fontSize": 18,
                                  "lineHeight": 25,
                                },
                                {
                                  "color": "#0E0F13",
                                  "fontFamily": "Titillium Sans Pro",
                                  "fontStyle": "normal",
                                  "fontWeight": "600",
                                },
                              ]
                            }
                            weight="SemiBold"
                          >
                            You have a notice due tomorrow
                          </Text>
                          <Text
                            allowFontScaling={false}
                            color="black"
                            defaultColor="black"
                            defaultWeight="Bold"
                            font="TitilliumSansPro"
                            fontStyle={
                              {
                                "fontSize": 14,
                                "lineHeight": 24,
                              }
                            }
                            style={
                              [
                                {
                                  "fontSize": 14,
                                  "lineHeight": 24,
                                },
                                {
                                  "color": "#0E0F13",
                                  "fontFamily": "Titillium Sans Pro",
                                  "fontStyle": "normal",
                                  "fontWeight": "400",
                                },
                              ]
                            }
                            weight="Regular"
                          >
                            Log in to pay for it
                          </Text>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RNSScreen>
      </RNSScreenContainer>
    </View>
  </RNCSafeAreaProvider>
</View>
`;

exports[`NotificationPreviewSample should match snapshot, preview on, reminder off 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "#FFFFFF",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        collapsable={false}
        pointerEvents="box-none"
        style={
          {
            "zIndex": 1,
          }
        }
      >
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          onLayout={[Function]}
          pointerEvents="box-none"
          style={null}
        >
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 0,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "backgroundColor": "#FFFFFF",
                  "borderBottomColor": "rgb(216, 216, 216)",
                  "flex": 1,
                  "shadowColor": "rgb(216, 216, 216)",
                  "shadowOffset": {
                    "height": 0.5,
                    "width": 0,
                  },
                  "shadowOpacity": 0.85,
                  "shadowRadius": 0,
                }
              }
            />
          </View>
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "height": 44,
                "maxHeight": undefined,
                "minHeight": undefined,
                "opacity": undefined,
                "transform": undefined,
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                {
                  "height": 0,
                }
              }
            />
            <View
              pointerEvents="box-none"
              style={
                {
                  "alignItems": "stretch",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-start",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginStart": 0,
                    "opacity": 1,
                  }
                }
              />
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "justifyContent": "center",
                    "marginHorizontal": 16,
                    "maxWidth": 718,
                    "opacity": 1,
                  }
                }
              >
                <Text
                  accessibilityRole="header"
                  aria-level="1"
                  collapsable={false}
                  numberOfLines={1}
                  onLayout={[Function]}
                  style={
                    {
                      "color": "rgb(28, 28, 30)",
                      "fontSize": 17,
                      "fontWeight": "600",
                    }
                  }
                >
                  ONBOARDING_NOTIFICATIONS_PREFERENCES
                </Text>
              </View>
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-end",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginEnd": 0,
                    "opacity": 1,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <RNSScreenContainer
        onLayout={[Function]}
        style={
          {
            "flex": 1,
          }
        }
      >
        <RNSScreen
          activityState={2}
          collapsable={false}
          gestureResponseDistance={
            {
              "bottom": -1,
              "end": -1,
              "start": -1,
              "top": -1,
            }
          }
          onGestureCancel={[Function]}
          pointerEvents="box-none"
          sheetAllowedDetents="large"
          sheetCornerRadius={-1}
          sheetExpandsWhenScrolledToEdge={true}
          sheetGrabberVisible={false}
          sheetLargestUndimmedDetent="all"
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              [
                {
                  "display": "flex",
                  "overflow": undefined,
                },
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              {
                "close": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                handlerTag={2}
                handlerType="PanGestureHandler"
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  {
                    "flex": 1,
                    "transform": [
                      {
                        "translateX": 0,
                      },
                      {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="box-none"
                  style={
                    [
                      {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      [
                        {
                          "backgroundColor": "#FFFFFF",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        style={
                          {
                            "alignItems": "center",
                            "backgroundColor": "#FFFFFF",
                            "borderColor": "#CCD4DC",
                            "borderRadius": 8,
                            "borderWidth": 1,
                            "flexDirection": "row",
                            "marginVertical": 4,
                            "minHeight": 90,
                            "paddingHorizontal": 24,
                            "paddingVertical": 8,
                          }
                        }
                      >
                        <RNSVGSvgView
                          accessibilityElementsHidden={true}
                          accessibilityLabel=""
                          accessible={false}
                          align="xMidYMid"
                          bbHeight={24}
                          bbWidth={24}
                          focusable={false}
                          height={24}
                          importantForAccessibility="no-hide-descendants"
                          meetOrSlice={0}
                          minX={0}
                          minY={0}
                          style={
                            [
                              {
                                "backgroundColor": "transparent",
                                "borderWidth": 0,
                              },
                              {
                                "color": "#2351E6",
                              },
                              {
                                "flex": 0,
                                "height": 24,
                                "width": 24,
                              },
                            ]
                          }
                          tintColor="#2351E6"
                          vbHeight={24}
                          vbWidth={24}
                          width={24}
                        >
                          <RNSVGGroup
                            fill={
                              {
                                "payload": 4278190080,
                                "type": 0,
                              }
                            }
                          >
                            <RNSVGPath
                              d="M2.5 2a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
                              fill={
                                {
                                  "type": 2,
                                }
                              }
                              propList={
                                [
                                  "fill",
                                ]
                              }
                            />
                            <RNSVGPath
                              clipRule={0}
                              d="M23.5 14c0 4.418-3.582 8-7.619 8-4.8 0-8.381-3.582-8.381-8s3.582-8 8.381-8c4.037 0 7.619 3.582 7.619 8Zm-6.035-.84h1.065v-1.048h-1.057v-1.267h-1.157v4.216c0 .667.092 1.122.283 1.365.184.252.537.374 1.058.374.2 0 .498-.049.881-.138l-.054-.975-.659.016c-.114 0-.199-.024-.252-.081a.328.328 0 0 1-.092-.195 4.118 4.118 0 0 1-.016-.39V13.16Zm-3.486-1.04v4.574h1.157v-4.573h-1.157Zm-1.737-.113c.203 0 .374.068.506.204a.692.692 0 0 1 .194.507.675.675 0 0 1-.194.5.684.684 0 0 1-.498.189.693.693 0 0 1-.708-.704.72.72 0 0 1 .195-.5.672.672 0 0 1 .505-.196Z"
                              fill={
                                {
                                  "type": 2,
                                }
                              }
                              fillRule={0}
                              propList={
                                [
                                  "fill",
                                  "fillRule",
                                ]
                              }
                            />
                            <RNSVGPath
                              d="M4.5 11.5a2 2 0 1 0-4 0V20a2 2 0 1 0 4 0v-8.5ZM2.5 2a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
                              fill={
                                {
                                  "type": 2,
                                }
                              }
                              propList={
                                [
                                  "fill",
                                ]
                              }
                            />
                            <RNSVGPath
                              clipRule={0}
                              d="M23.5 14c0 4.418-3.582 8-7.619 8-4.8 0-8.381-3.582-8.381-8s3.582-8 8.381-8c4.037 0 7.619 3.582 7.619 8Zm-6.035-.84h1.065v-1.048h-1.057v-1.267h-1.157v4.216c0 .667.092 1.122.283 1.365.184.252.537.374 1.058.374.2 0 .498-.049.881-.138l-.054-.975-.659.016c-.114 0-.199-.024-.252-.081a.328.328 0 0 1-.092-.195 4.118 4.118 0 0 1-.016-.39V13.16Zm-3.486-1.04v4.574h1.157v-4.573h-1.157Zm-1.737-.113c.203 0 .374.068.506.204a.692.692 0 0 1 .194.507.675.675 0 0 1-.194.5.684.684 0 0 1-.498.189.693.693 0 0 1-.708-.704.72.72 0 0 1 .195-.5.672.672 0 0 1 .505-.196Z"
                              fill={
                                {
                                  "type": 2,
                                }
                              }
                              fillRule={0}
                              propList={
                                [
                                  "fill",
                                  "fillRule",
                                ]
                              }
                            />
                            <RNSVGPath
                              d="M4.5 11.5a2 2 0 1 0-4 0V20a2 2 0 1 0 4 0v-8.5Z"
                              fill={
                                {
                                  "type": 2,
                                }
                              }
                              propList={
                                [
                                  "fill",
                                ]
                              }
                            />
                          </RNSVGGroup>
                        </RNSVGSvgView>
                        <View
                          style={
                            {
                              "width": 16,
                            }
                          }
                        />
                        <View
                          style={
                            {
                              "flex": 1,
                            }
                          }
                        >
                          <Text
                            allowFontScaling={false}
                            color="black"
                            defaultColor="black"
                            defaultWeight="SemiBold"
                            font="TitilliumSansPro"
                            fontStyle={
                              {
                                "fontSize": 18,
                                "lineHeight": 25,
                              }
                            }
                            style={
                              [
                                {
                                  "fontSize": 18,
                                  "lineHeight": 25,
                                },
                                {
                                  "color": "#0E0F13",
                                  "fontFamily": "Titillium Sans Pro",
                                  "fontStyle": "normal",
                                  "fontWeight": "600",
                                },
                              ]
                            }
                            weight="SemiBold"
                          >
                            Comune di Ipazia
                          </Text>
                          <Text
                            allowFontScaling={false}
                            color="black"
                            defaultColor="black"
                            defaultWeight="Bold"
                            font="TitilliumSansPro"
                            fontStyle={
                              {
                                "fontSize": 14,
                                "lineHeight": 24,
                              }
                            }
                            style={
                              [
                                {
                                  "fontSize": 14,
                                  "lineHeight": 24,
                                },
                                {
                                  "color": "#0E0F13",
                                  "fontFamily": "Titillium Sans Pro",
                                  "fontStyle": "normal",
                                  "fontWeight": "400",
                                },
                              ]
                            }
                            weight="Regular"
                          >
                            Summer camp registration is now open
                          </Text>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RNSScreen>
      </RNSScreenContainer>
    </View>
  </RNCSafeAreaProvider>
</View>
`;

exports[`NotificationPreviewSample should match snapshot, preview on, reminder on 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "#FFFFFF",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        collapsable={false}
        pointerEvents="box-none"
        style={
          {
            "zIndex": 1,
          }
        }
      >
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          onLayout={[Function]}
          pointerEvents="box-none"
          style={null}
        >
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 0,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "backgroundColor": "#FFFFFF",
                  "borderBottomColor": "rgb(216, 216, 216)",
                  "flex": 1,
                  "shadowColor": "rgb(216, 216, 216)",
                  "shadowOffset": {
                    "height": 0.5,
                    "width": 0,
                  },
                  "shadowOpacity": 0.85,
                  "shadowRadius": 0,
                }
              }
            />
          </View>
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "height": 44,
                "maxHeight": undefined,
                "minHeight": undefined,
                "opacity": undefined,
                "transform": undefined,
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                {
                  "height": 0,
                }
              }
            />
            <View
              pointerEvents="box-none"
              style={
                {
                  "alignItems": "stretch",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-start",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginStart": 0,
                    "opacity": 1,
                  }
                }
              />
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "justifyContent": "center",
                    "marginHorizontal": 16,
                    "maxWidth": 718,
                    "opacity": 1,
                  }
                }
              >
                <Text
                  accessibilityRole="header"
                  aria-level="1"
                  collapsable={false}
                  numberOfLines={1}
                  onLayout={[Function]}
                  style={
                    {
                      "color": "rgb(28, 28, 30)",
                      "fontSize": 17,
                      "fontWeight": "600",
                    }
                  }
                >
                  ONBOARDING_NOTIFICATIONS_PREFERENCES
                </Text>
              </View>
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-end",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginEnd": 0,
                    "opacity": 1,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <RNSScreenContainer
        onLayout={[Function]}
        style={
          {
            "flex": 1,
          }
        }
      >
        <RNSScreen
          activityState={2}
          collapsable={false}
          gestureResponseDistance={
            {
              "bottom": -1,
              "end": -1,
              "start": -1,
              "top": -1,
            }
          }
          onGestureCancel={[Function]}
          pointerEvents="box-none"
          sheetAllowedDetents="large"
          sheetCornerRadius={-1}
          sheetExpandsWhenScrolledToEdge={true}
          sheetGrabberVisible={false}
          sheetLargestUndimmedDetent="all"
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              [
                {
                  "display": "flex",
                  "overflow": undefined,
                },
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              {
                "close": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                handlerTag={1}
                handlerType="PanGestureHandler"
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  {
                    "flex": 1,
                    "transform": [
                      {
                        "translateX": 0,
                      },
                      {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="box-none"
                  style={
                    [
                      {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      [
                        {
                          "backgroundColor": "#FFFFFF",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        style={
                          {
                            "alignItems": "center",
                            "backgroundColor": "#FFFFFF",
                            "borderColor": "#CCD4DC",
                            "borderRadius": 8,
                            "borderWidth": 1,
                            "flexDirection": "row",
                            "marginVertical": 4,
                            "minHeight": 90,
                            "paddingHorizontal": 24,
                            "paddingVertical": 8,
                          }
                        }
                      >
                        <RNSVGSvgView
                          accessibilityElementsHidden={true}
                          accessibilityLabel=""
                          accessible={false}
                          align="xMidYMid"
                          bbHeight={24}
                          bbWidth={24}
                          focusable={false}
                          height={24}
                          importantForAccessibility="no-hide-descendants"
                          meetOrSlice={0}
                          minX={0}
                          minY={0}
                          style={
                            [
                              {
                                "backgroundColor": "transparent",
                                "borderWidth": 0,
                              },
                              {
                                "color": "#2351E6",
                              },
                              {
                                "flex": 0,
                                "height": 24,
                                "width": 24,
                              },
                            ]
                          }
                          tintColor="#2351E6"
                          vbHeight={24}
                          vbWidth={24}
                          width={24}
                        >
                          <RNSVGGroup
                            fill={
                              {
                                "payload": 4278190080,
                                "type": 0,
                              }
                            }
                          >
                            <RNSVGPath
                              d="M2.5 2a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
                              fill={
                                {
                                  "type": 2,
                                }
                              }
                              propList={
                                [
                                  "fill",
                                ]
                              }
                            />
                            <RNSVGPath
                              clipRule={0}
                              d="M23.5 14c0 4.418-3.582 8-7.619 8-4.8 0-8.381-3.582-8.381-8s3.582-8 8.381-8c4.037 0 7.619 3.582 7.619 8Zm-6.035-.84h1.065v-1.048h-1.057v-1.267h-1.157v4.216c0 .667.092 1.122.283 1.365.184.252.537.374 1.058.374.2 0 .498-.049.881-.138l-.054-.975-.659.016c-.114 0-.199-.024-.252-.081a.328.328 0 0 1-.092-.195 4.118 4.118 0 0 1-.016-.39V13.16Zm-3.486-1.04v4.574h1.157v-4.573h-1.157Zm-1.737-.113c.203 0 .374.068.506.204a.692.692 0 0 1 .194.507.675.675 0 0 1-.194.5.684.684 0 0 1-.498.189.693.693 0 0 1-.708-.704.72.72 0 0 1 .195-.5.672.672 0 0 1 .505-.196Z"
                              fill={
                                {
                                  "type": 2,
                                }
                              }
                              fillRule={0}
                              propList={
                                [
                                  "fill",
                                  "fillRule",
                                ]
                              }
                            />
                            <RNSVGPath
                              d="M4.5 11.5a2 2 0 1 0-4 0V20a2 2 0 1 0 4 0v-8.5ZM2.5 2a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
                              fill={
                                {
                                  "type": 2,
                                }
                              }
                              propList={
                                [
                                  "fill",
                                ]
                              }
                            />
                            <RNSVGPath
                              clipRule={0}
                              d="M23.5 14c0 4.418-3.582 8-7.619 8-4.8 0-8.381-3.582-8.381-8s3.582-8 8.381-8c4.037 0 7.619 3.582 7.619 8Zm-6.035-.84h1.065v-1.048h-1.057v-1.267h-1.157v4.216c0 .667.092 1.122.283 1.365.184.252.537.374 1.058.374.2 0 .498-.049.881-.138l-.054-.975-.659.016c-.114 0-.199-.024-.252-.081a.328.328 0 0 1-.092-.195 4.118 4.118 0 0 1-.016-.39V13.16Zm-3.486-1.04v4.574h1.157v-4.573h-1.157Zm-1.737-.113c.203 0 .374.068.506.204a.692.692 0 0 1 .194.507.675.675 0 0 1-.194.5.684.684 0 0 1-.498.189.693.693 0 0 1-.708-.704.72.72 0 0 1 .195-.5.672.672 0 0 1 .505-.196Z"
                              fill={
                                {
                                  "type": 2,
                                }
                              }
                              fillRule={0}
                              propList={
                                [
                                  "fill",
                                  "fillRule",
                                ]
                              }
                            />
                            <RNSVGPath
                              d="M4.5 11.5a2 2 0 1 0-4 0V20a2 2 0 1 0 4 0v-8.5Z"
                              fill={
                                {
                                  "type": 2,
                                }
                              }
                              propList={
                                [
                                  "fill",
                                ]
                              }
                            />
                          </RNSVGGroup>
                        </RNSVGSvgView>
                        <View
                          style={
                            {
                              "width": 16,
                            }
                          }
                        />
                        <View
                          style={
                            {
                              "flex": 1,
                            }
                          }
                        >
                          <Text
                            allowFontScaling={false}
                            color="black"
                            defaultColor="black"
                            defaultWeight="SemiBold"
                            font="TitilliumSansPro"
                            fontStyle={
                              {
                                "fontSize": 18,
                                "lineHeight": 25,
                              }
                            }
                            style={
                              [
                                {
                                  "fontSize": 18,
                                  "lineHeight": 25,
                                },
                                {
                                  "color": "#0E0F13",
                                  "fontFamily": "Titillium Sans Pro",
                                  "fontStyle": "normal",
                                  "fontWeight": "600",
                                },
                              ]
                            }
                            weight="SemiBold"
                          >
                            You have a notice due soon
                          </Text>
                          <Text
                            allowFontScaling={false}
                            color="black"
                            defaultColor="black"
                            defaultWeight="Bold"
                            font="TitilliumSansPro"
                            fontStyle={
                              {
                                "fontSize": 14,
                                "lineHeight": 24,
                              }
                            }
                            style={
                              [
                                {
                                  "fontSize": 14,
                                  "lineHeight": 24,
                                },
                                {
                                  "color": "#0E0F13",
                                  "fontFamily": "Titillium Sans Pro",
                                  "fontStyle": "normal",
                                  "fontWeight": "400",
                                },
                              ]
                            }
                            weight="Regular"
                          >
                            Log in to pay the notice issued by ACI
                          </Text>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RNSScreen>
      </RNSScreenContainer>
    </View>
  </RNCSafeAreaProvider>
</View>
`;
